# amberol

./: .gitlab-ci.yml  CHANGES.md  Cargo.toml  README.md  RELEASING.md  amberol.gresource  build.sh  meson.build
build-aux/: mytool_inno.iss.in
data/: io.bassi.Amberol.metainfo.xml.in.in
po/: LINGUAS  az.po  ca.po  fr.po  hu.po  is.po
src/: application.rs  main.rs  meson.build
src/audio/: cover_cache.rs  gst_backend.rs  mpris_controller.rs  player.rs  queue.rs  shuffle.rs  song.rs
