# SPDX-FileCopyrightText: 2022  Emmanuele Bassi
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "amberol"
authors = ["Emmanuele Bassi <ebassi@gnome.org>"]
version = "0.1.0"
edition = "2018"

[dependencies]
color-thief = "0.2.1"
gdk-pixbuf = { version = "0.20.10", features = ["v2_42"] }
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] }
lofty = "0.22.4"
log = "0.4"
mpris-server = "0.9.0"
once_cell = "1.10"
pretty_env_logger = "0.5"
rand = "0.9.1"
regex = "1.3.4"
serde_json = "1.0"
sha2 = "0.10.2"
fuzzy-matcher = "0.3.7"
async-channel = "2.2.0"
futures = "0.3"
windows-sys = "0.59.0"
gettext-sys = "0.22.5"
gio = { version = "0.20.11", package = "gio", features = ["v2_58"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ashpd = { version = "0.11.0", features = ["gtk4"] }

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_5"]

[dependencies.gst]
package = "gstreamer"
version = "0.23"

[dependencies.gst-audio]
package = "gstreamer-audio"
version = "0.23"

[dependencies.gst-player]
package = "gstreamer-player"
version = "0.23"
